--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -94,9 +94,13 @@
             {% for p in post_list %}
             <!--   Blog Post    -->
             <div class="card mb-4">
+                {% if p.head_image %}
                 <a href="#!">
-                    <img class="card-img-top" src="{{p.head_image.url}}" alt="..."/>
+                    <img class="card-img-top" src="{{p.head_image.url}}" alt="{{p}} head image"/>
+                    {% else %}
+                    <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/800/200" alt="random image"/>
                 </a>
+                {% endif %}
                 <div class="card-body">
                     <div class="small text-muted">{{p.created_at}}</div>
                     <h2 class="card-title h4">{{p.title}}</h2>
