--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -95,17 +95,18 @@
             <!--   Blog Post    -->
             <div class="card mb-4">
                 {% if p.head_image %}
-                <a href="#!">
                     <img class="card-img-top" src="{{p.head_image.url}}" alt="{{p}} head image"/>
                     {% else %}
                     <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/800/200" alt="random image"/>
-                </a>
                 {% endif %}
                 <div class="card-body">
                     <div class="small text-muted">{{p.created_at}}</div>
                     <h2 class="card-title h4">{{p.title}}</h2>
-                    <p class="card-text">{{p.content}}</p>
-                    <a class="btn btn-primary" href="{{p.get_absolute_url}}">Read more →</a>
+                    {% if p.hook_text %}
+                    <h5 class="text-muted">{{p.hook_text}}</h5>
+                    {% endif %}
+                    <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+                    <a class="btn btn-primary" href="{{p.get_absolute_url}} ">Read more →</a>
                 </div>
             </div>
             {% endfor %}
