--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -89,8 +89,9 @@
 
 <div class="container my-3">
     <div class="row">
-        <div class="col-md-8 col-lg-9">
+        <div class="col-md-8 col-lg-9" id="main-area">
             <h1>Blog</h1>
+        {% if post_list.exists %}
             {% for p in post_list %}
             <!--   Blog Post    -->
             <div class="card mb-4">
@@ -110,7 +111,9 @@
                 </div>
             </div>
             {% endfor %}
-
+        {% else %}
+            <h3>아직 게시물이 없습니다.</h3>
+        {% endif %}
             <!--   Pagination    -->
             <hr class="my-0"/>
             <ul class="pagination justify-content-center my-4">
