--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,7 +15,7 @@
             <h5 class="text-muted">{{post.hook_text}}</h5>
             <!-- Author -->
             <p class="text-muted fst-italic mb-2">Posted on {{post.created_at|date:"F d,Y"}} by
-                <a href="#">작성자명 쓸 위치(개발 예정)</a>
+                <a href="#">{{post.author|upper}}</a>
             </p>
             <hr/>
             <!-- Post categories-->
