--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -41,6 +41,17 @@
         <!-- Post content-->
         <section class="mb-5">
             <p>{{post.content}}</p>
+
+            <!-- Tag 관련 -->
+            {% if post.tags.exists %}
+            <i class="fas fa-tags"></i>
+            {% for tag in post.tags.iterator %}
+            <a href="{{tag.get_absoulte_url}}"><span class="badge badge-pill badge-dark">{{tag}}</span></a>
+            {% endfor %}
+            <br/>
+            <br/>
+            {% endif %}
+
             {% if post.file_upload %}
             <a href="{{post.file_upload.url}}" class="btn btn-outline-dark" role="button">
                 Download:
