--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -30,6 +30,18 @@
         <h5 class="text-muted">{{p.hook_text}}</h5>
         {% endif %}
         <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+
+        <!-- Tag 관련 -->
+        {% if p.tags.exists %}
+        <i class="fas fa-tags"></i>
+        {% for tag in p.tags.iterator %}
+        <a href="{{tag.get_absoulte_url}}"><span class="badge badge-pill badge-dark">{{tag}}</span></a>
+        {% endfor %}
+        <br/>
+        <br/>
+        {% endif %}
+
+
         <a class="btn btn-primary" href="{{p.get_absolute_url}} ">Read more →</a>
     </div>
 </div>
