--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,11 +13,20 @@
             <!-- Post title-->
             <h1 class="fw-bolder mb-1">{{post.title}}</h1>
             <h5 class="text-muted">{{post.hook_text}}</h5>
+
+            {% if user.is_authenticated and user == post.author %}
+            <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{post.pk}}/" role="button">
+                <i class="fas fa-pen"></i> Edit Post
+            </a>
+            {% endif %}
             <!-- Author -->
             <p class="text-muted fst-italic mb-2">Posted on {{post.created_at|date:"F d,Y"}} by
                 <a href="#">{{post.author|upper}}</a>
             </p>
+
             <hr/>
+
+
             <section class="d-flex">
                 <!-- Post categories-->
                 {% if post.category %}
