--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -49,7 +49,7 @@
 
         <!-- Post content-->
         <section class="mb-5">
-            <p>{{post.content}}</p>
+            <p>{{post.get_content_markdown | safe }}</p>
 
             <!-- Tag 관련 -->
             {% if post.tags.exists %}
