--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
 {{ post.title}} -Blog
@@ -86,18 +87,33 @@
 <div id="comment-area">
     <section class="mb-5">
         <div class="card bg-light">
+            <h5 class="card-header"> Leave a Comment:</h5>
             <div class="card-body">
+                {% if user.is_authenticated %}
                 <!-- Comment form-->
-                <form class="mb-2 "><textarea class="form-control" rows="3"
-                                              placeholder="Join the discussion and leave a comment!"></textarea>
-                    <button type="submit" class="btn btn-primary my-3">Submit</button>
+                <form class="mb-2" id="comment-form" method="POST" action="{{post.get_absolute_url}}new_comment/">
+                    {% csrf_token %}
+                    <div class="form-group">
+
+                        {{ comment_form | crispy}}
+
+                    </div>
+                    <!--                    <textarea class="form-control form-group" rows="3"-->
+                    <!--                              placeholder="Join the discussion and leave a comment!"></textarea>-->
+                    <button type="submit" class="btn btn-primary mb-2 ">Submit</button>
                 </form>
+                {% else %}
+                <a role="button" class="btn btn-outline-dark btn-block btn-sm mb-2" href="#" data-toggle="modal"
+                   data-target="#loginModal">
+                    Log in and leave a comment
+                </a>
+                {% endif %}
                 <!--    comment    -->
 
                 <!-- Single comment-->
                 {% if post.comment_set.exists %}
                 {% for comment in post.comment_set.iterator%}
-                <div class="media mb-4" id="comment-{{comment.pk}}">
+                <div class="media mb-2" id="comment-{{comment.pk}}">
                     <img class="d-flex mr-3 rounded-circle"
                          src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
                          alt=""/>
@@ -107,11 +123,13 @@
                         </h5>
                         <p>{{comment.content | linebreaks }}</p>
                     </div>
+
                 </div>
+                <hr/>
                 {% endfor %}
                 {% endif %}
             </div>
-            <hr/>
+
 
         </div>
     </section>
