--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -1,18 +1,191 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>개발자 정수아입니다.</title>
+    <title>About Jeong Sua</title>
+
+    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css'%}" media="screen">
+    <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
+    <script src="https://kit.fontawesome.com/{{ font_awesome_kit }}.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About me</a>
-</nav>
+{% include 'blog/navbar.html' %}
+<section>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-lg-8">
+                <h1>Hi, I'm Jeong Sua</h1>
+                <br/>
+                <p class="lead">
+                    차와 디저트, 책을 좋아합니다.
+                    <br/>
+                    기록과 협업으로 다양한 IT 경험을 쌓고자 노력하고 있습니다.
+                </p>
+                <ul>
+                    <li>EDUCATIONAL</li>
+                    <ul>
+                        <li>정보보호학과</li>
+                        <li>온라인 부트캠프</li>
+                    </ul>
+                    <li>CERTIFICATE</li>
+                    <ul>
+                        <li>정보처리기사</li>
+                        <li>ADsP</li>
+                        <li>SQLD</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="col-lg-4">
+                <img class="img-fluid" src="{% static 'single_pages/images/totoroblue.jpg' %}">
+            </div>
+        </div>
+    </div>
+</section>
 
-<h1>안녕하세요 정수아입니다.</h1>
-<h2>이력</h2>
-<h2>Portfolio</h2>
-<h3>준비 중....</h3>
+<section class="bg-light margin-for-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>PORTFOLIO</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">  <!--한 줄에 카드 4개가 보여지도록 하고 싶다면 col-lg-3으로 수정 (12/3)=4개가 한 줄이 됨-->
+                <div class="card" data-toggle="modal" data-target="#teaming2023">
+                    <img class="card-img-top" src="{% static 'single_pages/images/teaming_logo.png' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">효율적인 팀 프로젝트를 위한 서비스 Teaming</h5>
+                        <p>React, tailwindcss를 활용하여 프론트엔드 개발자로 웹 파트 개발에 참여했습니다. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#meetie2024">
+                    <img class="card-img-top" src="{% static 'single_pages/images/meetie_logo.png' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">IT 사람들을 위한 스터디 플랫폼 Meetie</h5>
+                        <p>Next.js,tailwindcss,Supabase,use-funnel를 활용하여 스터디 생성,수정,삭제 및 신청 관리 기능을 담당하여 개발했습니다 </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#tokki2022">
+                    <img class="card-img-top" src="{% static 'single_pages/images/tokki_logo.png' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">친환경 제품 추천 서비스 Tokki</h5>
+                        <p>Java, Python, Django를 활용하여 프론트엔드, 추천 서비스 개발자로 웹 개발에 참여했습니다. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--Modal-->
+<div class="modal fade" id="teaming2023" tabindex="-1" role="dialog" aria-labelledby="teaming2023ModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="teaming2023ModalLabel">효율적인 팀 프로젝트를 위한 서비스</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cose">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img class="img-fluid" src="{% static 'single_pages/images/teaming_logo.png' %}">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>메인 페이지, 일정 관리 기능을 담당하여 개발했습니다.</p>
+                        <button type="button" class="btn btn-light">
+                            <i class="fas fa-chalkboard-teacher"></i>대학연합 개발 동아리 UMC
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="meetie2024" tabindex="-1" role="dialog" aria-labelledby="meetie2024ModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="meetie2024ModalLabel">IT 사람들을 위한 스터디 플랫폼 Meetie</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cose">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img class="img-fluid" src="{% static 'single_pages/images/meetie_logo.png' %}">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Next.js,tailwindcss,Supabase,use-funnel를 활용하여 스터디 생성,수정,삭제 및 신청 관리 기능을 담당하여 개발했습니다</p>
+                        <button type="button" class="btn btn-light">
+                            <i class="fas fa-chalkboard-teacher"></i>웅진씽크빅
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="tokki2022" tabindex="-1" role="dialog" aria-labelledby="tokki2022ModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="tokki2022ModalLabel">친환경 제품 추천 서비스</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cose">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img class="img-fluid" src="{% static 'single_pages/images/tokki_logo.png' %}">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Java, Python, Django를 활용하여 프론트엔드, 추천 서비스 개발자로 웹 개발에 참여했습니다.</p>
+                        <button type="button" class="btn btn-light">
+                            <i class="fas fa-chalkboard-teacher"></i>소개딩
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
