docs: add additional content to about_me page

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -78,6 +78,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#blogcraft2025">
+                    <img class="card-img-top" src="{% static 'single_pages/images/blogcraft_django.png' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">Django로 만든 개인 블로그</h5>
+                        <p>Python, Django를 활용하여 개인 포트폴리오 사이트를 개발했습니다. </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -162,6 +171,36 @@
                         <p>Java, Python, Django를 활용하여 프론트엔드, 추천 서비스 개발자로 웹 개발에 참여했습니다.</p>
                         <button type="button" class="btn btn-light">
                             <i class="fas fa-chalkboard-teacher"></i>소개딩
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="blogcraft2025" tabindex="-1" role="dialog" aria-labelledby="blogcraft2025ModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="blogcraft2025ModalLabel">개인 포트폴리오 사이트</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cose">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img class="img-fluid" src="{% static 'single_pages/images/blogcraft_django.png' %}">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Python, Django를 활용하여 포트폴리오용 개인 사이트를 만들었습니다.</p>
+                        <button type="button" class="btn btn-light">
+                            <i class="fas fa-chalkboard-teacher"></i>개인 프로젝트
                         </button>
                     </div>
                 </div>
